trying to fix patreon button on mobile

--- a/css/stylesv2.css
+++ b/css/stylesv2.css
@@ -847,6 +847,11 @@ p.VOTDinfo{
         /* padding-right: 10px; */
     }
 
+    .showcase .showcase-footer {
+        position: relative;
+        height: 200px;
+    }
+
     .showcase .VOTD {
         height: 320px;
         width: 350px;
